--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "jwt-decode": "3.1.2",
     "keycode": "2.2.1",
     "konva": "^9.3.18",
-    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.2.0",
     "lodash": "4.17.21",
     "lodash.debounce": "^4.0.8",
     "marked": "4.3.0",
