--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "jwt-decode": "3.1.2",
     "keycode": "2.2.1",
     "konva": "^9.3.18",
+    "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
     "lodash": "4.17.21",
     "lodash.debounce": "^4.0.8",
@@ -114,7 +115,7 @@
     "react-imask": "7.6.1",
     "react-json-view": "^1.21.3",
     "react-konva": "^18.2.10",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "^4.2.1",
     "react-masonry-css": "1.0.16",
     "react-mosaic-component": "^6.1.1",
     "react-number-format": "5.4.0",
