--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "-": "^0.0.1",
+    "@atlaskit/select": "^18.10.6",
     "@aws-amplify/auth": "6.3.5",
     "@aws-amplify/ui-react": "6.1.12",
     "@emotion/cache": "11.11.0",
