--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-draggable": "4.4.6",
     "react-dropzone": "^14.3.5",
     "react-email": "^3.0.6",
+    "react-flow": "^1.0.3",
     "react-hook-form": "^7.54.2",
     "react-i18next": "14.1.2",
     "react-icons": "^5.4.0",
@@ -142,6 +143,7 @@
     "react-virtualized": "9.22.5",
     "react-virtuoso": "4.7.11",
     "react-window": "1.8.10",
+    "reactflow": "^11.11.4",
     "redoc": "2.1.4",
     "redux-logger": "4.0.0",
     "reselect": "5.1.1",
